# blackwire

./: .gitignore  call_off.pcapng  call_on.pcapng  mute_off.pcapng  mute_on.pcapng  notes.md  vol_down.pcapng  vol_up.pcapng
blackwire/: CMakeLists.txt
blackwire/include/: blackwire.h  handler.h  mq.h
blackwire/src/: CMakeLists.txt  handler.c  main.c  mq.c
blackwire_client/blackwire/: manager.py
blackwire_client/blackwire/apps/: base.py  hello.py
plantronics_usb/: CMakeLists.txt  main.cpp
